# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  InputHandler.cpp  InputHandler.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  Window.cpp  Window.h  main.cpp
src/ECS/: CameraComponent.cpp  CameraComponent.h  ECSManager.h  Entity.h  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  RenderSystem.cpp  RenderSystem.h  System.h  TransformComponent.h
